[metadata]
name = python-couchbase-helper
version = attr: couchbase_helper.__version__
author = Thomas 'sitzz' Vang
author_email = sitzzdk@gmail.com
description = Simple Couchbase helper for Python 3.7+ adding basic functionality.
license = WTFPL v2
keywords =
    falcon
    api
    sqlalchemy
    mvc
url = https://github.com/sitzz/python-couchbase-helper
#long_description = file: README.md
#long_description_content_type = text/md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: WTFPL
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = false
include_package_data = true
packages = couchbase_helper
python_requires = >=3.8
install_requires =
    couchbase>=4.0.0
